<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="400dp"
    android:gravity="center"
    android:background="@drawable/dialog_bg">

        <ImageView
            android:id="@+id/imgClose"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/ic_close_black_24dp"
            android:textColor="#000000"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="151dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="190dp"
            android:layout_marginBottom="15dp"
            android:text="@string/see"
            android:textColor="#000000"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="110dp"
            android:layout_marginBottom="15dp"
            android:text="@string/sound"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="15dp"
            android:text="@string/OK"
            android:textColor="#000000"
            android:textSize="20sp"/>

</RelativeLayout>

